syntax = "proto3";

package task; 

service TaskService {
  
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc GetTasks (GetTasksRequest) returns (GetTasksResponse) {}
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse) {}
  
  
}

message Query {
  optional int32 page = 1;
  optional int32 limit = 2;
}


message QueryData {
  optional string status = 1;
  optional string priority = 2;
  optional string assignedTo = 3;
}

message GetTasksRequest {
   optional QueryData data = 1;
   optional Query query = 2;
 
 
}


message GetTasksData {

 
   int32 total = 1;
  repeated Task tasks = 2;

}

message GetTasksResponse {
  int32 status = 1;
  bool success = 2;
  string message = 3;
  optional string error = 4;
  GetTasksData data = 5;
  
}

message GetTaskRequest {
  
  string id = 1;
  optional bool isDeleted = 2;
 
}

message GetTaskResponse {
  int32 status = 1;
  bool success = 2;
  string message = 3;
  optional string error = 4;
  Task data = 5;
  
}


message Task{
  string id = 1;
  string title = 2;
  string description = 3;
  string assignedTo = 4;
  string createdBy = 5;
  string status = 6;
  string priority = 7;
  optional string dueDate = 8;
  optional string completedAt = 9;
  optional string createdAt = 10;
  optional string updatedAt = 11;
  optional bool isDeleted = 12;
}

message CreateTaskRequest {
  
  string title = 1;
  string description = 2;
  string assignedTo = 3;
  string createdBy = 4;
  string status = 5;
  string priority = 6;
  optional int64 dueDate = 7;
  optional int64 completedAt = 8;
}

message CreateTaskResponse {
  int32 status = 1;
  bool success = 2;
  string message = 3;
  optional string error = 4;
  Task data = 5;
  
}


message UpdateTaskRequest {
  
  optional string id = 1;
  optional string status = 2;
  optional string priority = 3;
  optional int64 dueDate = 4;
  optional int64 completedAt = 5;
  optional bool isDeleted = 6;
 
}

message UpdateTaskResponse {
  int32 status = 1;
  bool success = 2;
  string message = 3;
  optional string error = 4;
  Task data = 5;
  
}



